# goose-db

./: .gitignore  CHANGELOG.md  Cargo.toml  INITIAL.md  README.md  Walkthrough.md
benches/: tpch_q1.rs
scripts/: flamegraph.ps1  run_duckdb.py
src/: aggregator.rs  expressions.rs  filter.rs  lib.rs  main.rs  memory.rs  query.rs  reader.rs  utils.rs
